rework conditional statements, finish form validation

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </div>
         <div class="passwordSection">
           <label for="password">* Password</label>
-          <input type="text" id="password" />
+          <input type="password" id="password" />
           <span class="error-password"></span>
         </div>
         <div class="confirmPasswordSection">
           <label for="confirmPassword">* Confirm password</label>
-          <input type="text" id="confirmPassword" />
+          <input type="password" id="confirmPassword" />
           <span class="error-confirm"></span>
         </div>
         <button>Submit</button>
